[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-document-analysis"
version = "1.0.0"
description = "Unified interface for document analysis frameworks - automatically routes to xml, docling, document, or data analysis frameworks"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Red Hat AI Americas", email = "noreply@redhat.com"}
]
keywords = ["ai", "document-analysis", "xml", "pdf", "data-analysis", "unified-interface"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
]

dependencies = [
    "analysis-framework-base>=1.0.0",
]

[project.optional-dependencies]
xml = ["xml-analysis-framework>=2.0.0"]
docling = ["docling-analysis-framework>=2.0.0"]
document = ["document-analysis-framework>=2.0.0"]
data = ["data-analysis-framework>=2.0.0"]

# Convenience groups
lightweight = [
    "xml-analysis-framework>=2.0.0",
    "document-analysis-framework>=2.0.0",
]
all = [
    "xml-analysis-framework>=2.0.0",
    "docling-analysis-framework>=2.0.0",
    "document-analysis-framework>=2.0.0",
    "data-analysis-framework>=2.0.0",
]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]

[project.urls]
Homepage = "https://github.com/rdwj/unified-document-analysis"
Repository = "https://github.com/rdwj/unified-document-analysis"
"Bug Tracker" = "https://github.com/rdwj/unified-document-analysis/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
